--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "style-loader": "^3.3.1",
     "stylus-loader": "^7.1.0",
     "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0"
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   }
 }
