--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "dev": "npx webpack serve --config ./config/webpack.dev.js",
     "build": "npx webpack --config ./config/webpack.prod.js"
   },
+  "browserslist": [
+    "last 2 version",
+    "> 1%",
+    "not dead"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -17,12 +22,17 @@
     "@babel/preset-env": "^7.19.4",
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.2.2",
     "eslint": "^8.26.0",
     "eslint-webpack-plugin": "^3.2.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
+    "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.3",
+    "postcss": "^8.4.18",
+    "postcss-loader": "^7.0.1",
+    "postcss-preset-env": "^7.8.2",
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "stylus-loader": "^7.1.0",
