--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "sass-loader": "^13.1.0",
     "style-loader": "^3.3.1",
     "stylus-loader": "^7.1.0",
+    "thread-loader": "^3.0.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1"
